bug-1179: main logo visibility fixed

--- a/themes/bootstrap3/less/elements/cpk-icons.less
+++ b/themes/bootstrap3/less/elements/cpk-icons.less
@@ -114,7 +114,7 @@
   &.knihovny-logo {
     font-size: 220px;
     margin-left: 5px;
-    margin-top: -87px;
+    margin-top: -84px;
   }
   &.knihovny-logo:before {
     font-family: 'knihovny';
